[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/LobbyEntry.gd" type="Script" id=1]
[ext_resource path="res://resources/Pixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://resources/PeerCount.svg" type="Texture" id=3]
[ext_resource path="res://resources/Speed.svg" type="Texture" id=4]
[ext_resource path="res://resources/Map.svg" type="Texture" id=5]
[ext_resource path="res://Button.tscn" type="PackedScene" id=6]
[ext_resource path="res://resources/ButtonFilled.tres" type="StyleBox" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.917647, 0.929412, 0.913725, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 16

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[node name="LobbyTemplate" type="Panel"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 9.0
margin_right = -12.0
margin_bottom = 85.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="Name" type="Label" parent="."]
margin_left = 11.0435
margin_top = 11.3574
margin_right = 192.043
margin_bottom = 42.3574
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Name"
valign = 1

[node name="PeerCount" type="Control" parent="."]
modulate = Color( 0.627451, 0.607843, 0.607843, 1 )
margin_left = 21.7392
margin_top = 54.7476
margin_right = 54.7392
margin_bottom = 67.7476
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="PeerCount"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 0.313644
margin_top = -8.7195
margin_right = 20.3136
margin_bottom = 11.2805
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="Value" type="Label" parent="PeerCount"]
anchor_bottom = 1.0
margin_left = 22.3009
margin_top = -7.75069
margin_right = 50.3009
margin_bottom = 5.24931
custom_fonts/font = SubResource( 3 )
text = "1"

[node name="Difficulty" type="Control" parent="."]
modulate = Color( 0.627451, 0.607843, 0.607843, 1 )
margin_left = 58.8648
margin_top = 54.6037
margin_right = 91.8648
margin_bottom = 67.6037
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="Difficulty"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 15.0245
margin_top = -11.5139
margin_right = 38.0245
margin_bottom = 11.4861
texture = ExtResource( 4 )
expand = true
stretch_mode = 1

[node name="Value" type="Label" parent="Difficulty"]
anchor_bottom = 1.0
margin_left = 41.0265
margin_top = -8.56494
margin_right = 115.027
margin_bottom = 4.43506
custom_fonts/font = SubResource( 4 )
text = "Medium"

[node name="Map" type="Control" parent="."]
modulate = Color( 0.627451, 0.607843, 0.607843, 1 )
margin_left = 128.053
margin_top = 54.6037
margin_right = 161.053
margin_bottom = 67.6037
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="Map"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 60.3972
margin_top = -12.5
margin_right = 82.3972
margin_bottom = 9.5
texture = ExtResource( 5 )
expand = true
stretch_mode = 1

[node name="Value" type="Label" parent="Map"]
anchor_bottom = 1.0
margin_left = 83.5116
margin_top = -9.00089
margin_right = 153.512
margin_bottom = 3.99911
custom_fonts/font = SubResource( 4 )
text = "Classic"

[node name="Join" parent="." instance=ExtResource( 6 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -153.61
margin_top = -28.0
margin_right = -12.61
margin_bottom = 28.0
mouse_filter = 2
custom_styles/panel = ExtResource( 7 )
text = "Join"
filled = true

[connection signal="gui_input" from="." to="." method="_on_LobbyTemplate_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_LobbyTemplate_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_LobbyTemplate_mouse_exited"]
